# ffvideo

./: .gitignore  CMakeLists.txt  README.md  demo_embeddings.py  ffvideo.py
ffvideo_player_src/: FaceDetect.cpp  FrameEncoder.h  ffvideo_player_app.h  ffvideo_python.cpp  ffvideo_python.h
ffvideolib_src/: ffvideo.cpp  ffvideo.h  ffvideo_frameMgr.cpp  ffvideo_frameMgr.h  ffvideo_image.cpp  ffvideo_util.cpp
